fixes image not showing

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -215,7 +215,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/school.jpg) no-repeat center center scroll;
+    background: url(../img/school.JPG) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
